aks-sfs-mongo.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  annotations:
    service.beta.kubernetes.io/azure-dns-label-name: let-me-cook
spec:
  type: LoadBalancer
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    app: mongo
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
spec:
  selector:
    matchLabels:
      app: mongo
  serviceName: "mongo"
  replicas: 1
  template:
    metadata:
      labels:
        app: mongo
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: mongo
          image: mongo
          command:
            - mongod
            - "--bind_ip_all"
            - "--replSet"
            - rs0
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: azure-vol
              mountPath: /mnt/azure
      volumes:
        - name: azure-vol
          persistentVolumeClaim:
            claimName: mongo-pvc
