livinglikelarry-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: texas-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: texas
  template:
    metadata:
      labels:
        app: texas
    spec:
      containers:
      - name: texas
        image: texasimages.azurecr.io/livinglikelarry
        # imagePullPolicy: Never
        ports:
        - containerPort: 3000

---

apiVersion: v1
kind: Service
metadata:
  name: texas-service
spec:
  selector:
    app: texas
  ports:
  - name: http
    port: 3000
    targetPort: 3000
  type: LoadBalancer
